--- a/SmartSchool-WebAPI.csproj
+++ b/SmartSchool-WebAPI.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Data\.DataContext.cs.swp" />
+  </ItemGroup>
+
 </Project>
